[package]
name = "flatgrass-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.20"
proc-macro2 = "1.0.40"

[dependencies.syn]
version = "1.0.98"
features = ["full"]