[package]
name = "flatgrass"
version = "0.1.0"
edition = "2024"
readme = "README.md"

[lib]
doctest = false

[features]
default = ["macros"]
macros = ["dep:flatgrass-macros"]
serde = ["dep:serde", "either?/serde"]
either = ["dep:either"]

[dependencies.either]
version = "1"
optional = true

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[dependencies.flatgrass-macros]
path = "../flatgrass-macros"
optional = true

[dependencies.flatgrass-ffi]
path = "../flatgrass-ffi"

[package.metadata.docs.rs]
all-features = true
