[package]
name = "flatgrass"
version = "0.1.0"
edition = "2024"
readme = "README.md"

[lib]
doctest = false

[features]
default = ["macros"]
macros = ["dep:flatgrass-macros"]
serde = ["dep:serde", "either?/serde"]
either = ["dep:either"]
async = [
	"flatgrass-macros?/async",
	"dep:crtn"
]

[dependencies.flatgrass-ffi]
path = "../flatgrass-ffi"

[dependencies.flatgrass-macros]
path = "../flatgrass-macros"
optional = true

[dependencies.either]
version = "1"
optional = true

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[dependencies.crtn]
git = "https://github.com/Dragoteryx/crtn.git"
features = ["executor"]
optional = true

[build-dependencies]
rustc_version = "0.4"

[package.metadata.docs.rs]
all-features = true
